# xnotifs

./: .gitignore  Cargo.toml
macos/xnotifs-menubar/: .gitignore  Makefile  Package.swift
macos/xnotifs-menubar/Sources/xnotifs-menubar/: AppDelegate.swift  main.swift
macos/xnotifs-menubar/Sources/xnotifs-menubar/Models/: AppSettings.swift  NotificationModels.swift
macos/xnotifs-menubar/Sources/xnotifs-menubar/Networking/: ApiClient.swift  AppLog.swift
macos/xnotifs-menubar/Sources/xnotifs-menubar/Resources/: Info.plist
macos/xnotifs-menubar/Sources/xnotifs-menubar/ViewModels/: NotificationsViewModel.swift
macos/xnotifs-menubar/Sources/xnotifs-menubar/Views/: NotificationListView.swift  NotificationRow.swift  SettingsView.swift  Styles.swift
macos/xnotifs-menubar/launchd/: ml.rawdog.xnotifs-menubar.plist
src/: app.rs  client.rs  main.rs  models.rs  settings.rs  style.css
