[package]
name = "xnotifs"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4 = { version = "0.11", features = ["v4_12"] }
libadwaita = { version = "0.9", features = ["v1_5"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip", "brotli", "blocking"] }
ksni = "0.3"
tokio = { version = "1", features = ["rt", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "serde", "clock"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
lru = "0.12"
url = "2"
open = "5"
dirs = "6"
toml = "0.8"
